# rflogs-server

./: Dockerfile  README.md  pyproject.toml
rflogs_server/: logging_config.py  main.py  models.py  oidc_utils.py  output_service.py  storage.py  utils.py
rflogs_server/auth/: oidc.py  providers.py
rflogs_server/database/: connection.py  projects.py  runs.py  users.py
rflogs_server/database/migrations/: 001_initial_schema.sql  002_add_run_tags.sql  003_add_bucket_name_to_workspaces.sql  004_drop_user_id_from_runs.sql  005_add_run_start_end_times.sql  006_add_failed_tests_column.sql  007_add_timing_stats_tables.sql  008_add_project_retention_days.sql
rflogs_server/routes/: projects_management.py  public_routes.py  runs_routes.py  user_management.py  workspace_routes.py
