[tool.poetry]
name = "rflogs-server"
version = "0.1.0"
description = "Open source API server for Robot Framework test results management"
authors = ["Mikko Korpela <mikko.korpela@gmail.com>"]
license = "AGPL-3.0-only"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.112.2"
uvicorn = "^0.30.6"
python-multipart = "^0.0.9"
starlette = "^0.38.2"
itsdangerous = "^2.2.0"
structlog = "^24.4.0"
boto3 = "^1.35.10"
httpx = "^0.27.2"
psycopg2-binary = "^2.9.9"
argon2-cffi = "^23.1.0"
pyjwt = {extras = ["crypto"], version = "^2.9.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.5"
pytest-cov = "^4.1.0"
black = "^24.2.0"
isort = "^5.13.2"
mypy = "^1.8.0"
ruff = "^0.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=rflogs_server"
testpaths = [
    "tests",
]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.11"
strict = true

[tool.ruff]
select = ["E", "F", "B", "I"]
ignore = []
line-length = 88
target-version = "py311"